Fix card image hover overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,12 +31,10 @@ main {
   ARTICLE CARD
 **************************/
 .card {
+  width: 340px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 550px;
-  padding: 1em 1.5em;
-  margin: auto;
+  padding: 1em 1.5em; 
   background-color: var(--dark-blue);
   color: var(--soft-blue);
   border-radius: 10px;
@@ -46,19 +44,22 @@ main {
   position: relative;
   width: 100%;
   height: 280px;
-  padding: 7em 7em;
   background-image: url('./images/image-equilibrium.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
   background-color: var(--clr-background-image);
   border-radius: 10px;
-  transition: color 0.2s ease;
+  transition: all 0.2s ease;
 }
 .card__image:hover,
 .card__image:focus-visible {
   content: url(./images/icon-view.svg);  
   background-blend-mode: screen;
   cursor: pointer;
+  padding: 6em;
+}
+.card__content {
+  margin-top: 1.5rem;
 }
 .card__title {
   text-decoration: none;
